## Process this file with automake to produce Makefile.in

cplab3_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

cplab3_doc_DATA = \
	annotated.html\
	authors.html\
	bug.html\
	changelog.txt\
	classclient.html\
	classclientDemo.html\
	classclientDemo__coll__graph.gif\
	classclientDemo__inherit__graph.gif\
	classclient__coll__graph.gif\
	classclient__inherit__graph.gif\
	classserver.html\
	classserverDemo.html\
	classserverDemo__coll__graph.gif\
	classserverDemo__inherit__graph.gif\
	classserver__coll__graph.gif\
	classserver__inherit__graph.gif\
	classtcpip.html\
	classtcpip__coll__graph.gif\
	classtcpip__inherit__graph.gif\
	clientDemo_8cc-source.html\
	clientDemo_8cc.html\
	clientDemo_8cc__incl.gif\
	clientDemo_8h-source.html\
	clientDemo_8h.html\
	clientDemo_8h__dep__incl.gif\
	clientDemo_8h__incl.gif\
	client_8cc-source.html\
	client_8cc.html\
	client_8cc__incl.gif\
	client_8h-source.html\
	client_8h.html\
	client_8h__dep__incl.gif\
	client_8h__incl.gif\
	const_8h-source.html\
	const_8h.html\
	const_8h__dep__incl.gif\
	doxygen.css\
	doxygen.gif\
	files.html\
	footer.html\
	ftv2blank.gif\
	ftv2doc.gif\
	ftv2folderclosed.gif\
	ftv2folderopen.gif\
	ftv2lastnode.gif\
	ftv2link.gif\
	ftv2mlastnode.gif\
	ftv2mnode.gif\
	ftv2node.gif\
	ftv2plastnode.gif\
	ftv2pnode.gif\
	ftv2vertline.gif\
	functions.html\
	globals.html\
	gnu.txt\
	graph_legend.dot\
	graph_legend.gif\
	graph_legend.html\
	hierarchy.html\
	index.html\
	inherit__graph__0.gif\
	inherits.html\
	install.txt\
	main.html\
	main_8cc-source.html\
	main_8cc.html\
	main_8cc__incl.gif\
	news.txt\
	pages.html\
	serverDemo_8cc-source.html\
	serverDemo_8cc.html\
	serverDemo_8cc__incl.gif\
	serverDemo_8h-source.html\
	serverDemo_8h.html\
	serverDemo_8h__dep__incl.gif\
	serverDemo_8h__incl.gif\
	server_8cc-source.html\
	server_8cc.html\
	server_8cc__incl.gif\
	server_8h-source.html\
	server_8h.html\
	server_8h__dep__incl.gif\
	server_8h__incl.gif\
	tcpip_8cc-source.html\
	tcpip_8cc.html\
	tcpip_8cc__incl.gif\
	tcpip_8h-source.html\
	tcpip_8h.html\
	tcpip_8h__dep__incl.gif\
	todo.html\
	tree.html\
	tree.js\
	treeview.js\
	usage.html\
	Doxyfile

EXTRA_DIST = $(cplab3_doc_DATA)
