## Process this file with automake to produce Makefile.in

INCLUDES =\
	 -Wall

bin_PROGRAMS = cplab3

cplab3_SOURCES = \
	main.cc\
	tcpip.cc\
	server.cc\
	client.cc\
	client.h\
	const.h\
	server.h\
	tcpip.h\
	clientDemo.h\
	clientDemo.cc\
	serverDemo.cc\
	serverDemo.h

cplab3_LDFLAGS = 

cplab3_LDADD = 

